Fixed spacing

--- a/assets/sass/_nav.scss
+++ b/assets/sass/_nav.scss
@@ -90,7 +90,7 @@ $font-family-secondary: "MarkPro-Medium", Arial, sans-serif;
     }
   }
 
-  + .hero {
+  ~ .hero {
     margin-top: $header-height;
   }
 
